update: skeletion responsive + basic layout

--- a/index.html
+++ b/index.html
@@ -3,22 +3,92 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/style.css">
-
+	<link rel="stylesheet" href="./css/home.css">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+	<script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
 	<title>Open Source Day</title>
 </head>
 <body>
-	
+	<span id="anchor"></span>
+	<div id="landing">
+		<section id="landingTitle"></section>
+		<h1>1<sup>ére</sup> édition de la Journée <a class="beon-f" href="https://opensource.org/" target="_blank">Open Source</a></h1>
+		<h2>Orchestrée par les stagiaires d'<span>ISTA NTIC SAFI</span></h2>
+	</div>
 	<header>
-		<nav>
+		<a href="./index.html"><img src="./img/logo.png"></a>
+		<nav id="nav-desktop">
 			<a href="#presentation">Présentation</a>
 			<a href="#hote">Hôte</a>
-			<a href=""></a>
+			<a href="#intervenants">Intervenants</a>
 			<a href=""></a>
 			<a href=""></a>
 			<a href=""></a>
 		</nav>
+		<nav id="nav-mobile">
+			<a href="#presentation">Présentation</a>
+			<a href="#hote">Hôte</a>
+			<a href="#intervenants">Intervenants</a>
+			<a href=""></a>
+			<a href=""></a>
+			<a href=""></a>
+		</nav>
+		<button id="showNav">&copf;</button>
+		<button id="hideNav">&cross;</button>
 	</header>
+	
+	
+	<!-- section 1 -->
+	<h2 class="sectionTitle" id="presentation">Présentation</h2>
+	<section  class="cards-container">
+		<article class="card">
+			<h2>1</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+		</article>
+		<article class="card">
+			<h2>2</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+		</article>
+		<article class="card">
+			<h2>3</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+		</article>
+			
+	</section>
 
+	<!-- Section 2 -->
+	<h2 class="sectionTitle"  id="hote">Hôte</h2>
+	<section class="cards-container">
+		<article class="card">
+			<h2>1</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+		</article>
+		<article class="card">
+			<h2>2</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+		</article>
+		<article class="card">
+			<h2>3</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+		</article>
+			
+	</section>
+	<footer>
+		<span>&copy; Tout les droits sont réservés</span>
+		<span>
+			<span>CLUB</span>
+			<a href="https://www.linkedin.com/company/club-it-innovation-team-ntic-safi/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+			<a href="https://www.facebook.com/itinnovationteam" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+			&nbsp;&nbsp; | &nbsp;&nbsp;
+			<a href="https://www.linkedin.com/school/specialized-institute-of-applied-technology-ntic/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+			<a href="https://www.facebook.com/Ntic.Safi" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+			<span>NTIC SAFI</span>
+
+		</span>
+		<span>Cree par &nbsp;<a href="https://github.com/black-purple" class="beon-f" target="_blank"> black-purple</a></span>
+	</footer>
+	<a href="#anchor"><i class="fa-solid fa-arrow-up"></i></a>
+
+	<script src="./js/navbar_behaviour.js"></script>
 </body>
 </html>
