fix: minor tweaks for mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="landing">
 		<section id="landingTitle"></section>
 		<h1>1<sup>ére</sup> édition de la Journée <a class="beon-f" href="https://opensource.org/" target="_blank">Open Source</a></h1>
-		<h2>Orchestrée par les stagiaires d'<span>ISTA NTIC SAFI</span></h2>
+		<h2 id="subtitle">Orchestrée par les stagiaires d'<span>ISTA NTIC SAFI</span></h2>
 	</div>
 	<header>
 		<a href="./index.html"><img src="./img/logo.png"></a>
@@ -33,7 +33,7 @@
 			<a href=""></a>
 			<a href=""></a>
 		</nav>
-		<button id="showNav">&copf;</button>
+		<button id="showNav"><i class="fa-solid fa-bars"></i></button>
 		<button id="hideNav">&cross;</button>
 	</header>
 	
