fix: minor tweaks

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<span>NTIC SAFI</span>
 
 		</span>
-		<span>Cree par &nbsp;<a href="https://github.com/black-purple" class="beon-f" target="_blank"> black-purple</a></span>
+		<span>Crée par &nbsp;<a href="https://github.com/black-purple" class="beon-f" target="_blank"> black-purple</a></span>
 	</footer>
 	<a href="#anchor"><i class="fa-solid fa-arrow-up"></i></a>
 
