update: changed landing + sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/home.css">
+	<link rel="stylesheet" href="./css/card.scss">
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 	<script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
 	<title>Open Source Day</title>
@@ -11,24 +12,21 @@
 <body>
 	<span id="anchor"></span>
 	<div id="landing">
-		<section id="landingTitle"></section>
-		<h1>1<sup>ére</sup> édition de la Journée <a class="beon-f" href="https://opensource.org/" target="_blank">Open Source</a></h1>
-		<h2 id="subtitle">Orchestrée par les stagiaires d'<span>ISTA NTIC SAFI</span></h2>
 	</div>
 	<header>
-		<a href="./index.html"><img src="./img/logo.png"></a>
+		<a href="./index.html" id="logo"><img src="./img/logo.png"></a>
 		<nav id="nav-desktop">
 			<a href="#presentation">Présentation</a>
-			<a href="#hote">Hôte</a>
 			<a href="#intervenants">Intervenants</a>
+			<a href="#hote">Ateliers</a>
 			<a href=""></a>
 			<a href=""></a>
 			<a href=""></a>
 		</nav>
 		<nav id="nav-mobile">
 			<a href="#presentation">Présentation</a>
-			<a href="#hote">Hôte</a>
 			<a href="#intervenants">Intervenants</a>
+			<a href="#hote">Ateliers</a>
 			<a href=""></a>
 			<a href=""></a>
 			<a href=""></a>
@@ -41,35 +39,49 @@
 	<!-- section 1 -->
 	<h2 class="sectionTitle" id="presentation">Présentation</h2>
 	<section  class="cards-container">
-		<article class="card">
-			<h2>1</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
-		</article>
-		<article class="card">
-			<h2>2</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
-		</article>
-		<article class="card">
-			<h2>3</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
-		</article>
-			
+			<article>
+				À l'origine, l'expression « Open Source » faisait référence aux logiciels Open Source. Un logiciel Open Source est un code conçu pour être accessible au public : n'importe qui peut voir, modifier et distribuer le code à sa convenance.
+			</article>
+			<article>
+				Ce type de logiciel est développé de manière collaborative et décentralisée, par une communauté, et repose sur l'examen par les pairs. Un logiciel Open Source est souvent moins cher, plus flexible et profite d'une longévité supérieure par rapport à ses équivalents propriétaires, car il est développé par des communautés et non par une entreprise ou un auteur.
+			</article>
+			<article>
+				L'Open Source est devenu un mouvement à part entière et une méthode de travail qui dépasse la simple création de logiciels. Le mouvement de l'Open Source s'appuie sur les valeurs et le modèle de production décentralisée des logiciels Open Source pour trouver de nouvelles manières de résoudre les problèmes auxquels font face des communautés et des secteurs d'activité.
+			</article>
 	</section>
 
-	<!-- Section 2 -->
-	<h2 class="sectionTitle"  id="hote">Hôte</h2>
+	<h2 class="sectionTitle"  id="ateliers">Intervenants</h2>
 	<section class="cards-container">
 		<article class="card">
-			<h2>1</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+			<div class="cardHeader">
+				<span></span>
+				<img src="./img/youssefMourdi.jpg" alt="">
+			</div>
+			<div id="carBody">
+				
+			</div>
+
+		</article>
+	</section>
+	<!-- Section 3 -->
+	<h2 class="sectionTitle"  id="ateliers">Ateliers</h2>
+	<section class="cards-container">
+		<article class="card">
+			<div class="cardHeader">
+				<span></span>
+				<img src="./img/youssefMourdi.jpg" alt="">
+			</div>
+			<div id="carBody">
+				
+			</div>
+
 		</article>
 		<article class="card">
-			<h2>2</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+			
 		</article>
 		<article class="card">
-			<h2>3</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta praesentium numquam perferendis voluptatum molestiae amet assumenda corrupti nihil eos quo aspernatur, voluptates aliquam, provident earum quam ipsum iure nemo.
+			
+			
 		</article>
 			
 	</section>
