update: workshops and guests added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/home.css">
-	<link rel="stylesheet" href="./css/card.scss">
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 	<script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
 	<title>Open Source Day</title>
@@ -18,18 +17,12 @@
 		<nav id="nav-desktop">
 			<a href="#presentation">Présentation</a>
 			<a href="#intervenants">Intervenants</a>
-			<a href="#hote">Ateliers</a>
-			<a href=""></a>
-			<a href=""></a>
-			<a href=""></a>
+			<a href="#ateliers">Ateliers</a>
 		</nav>
 		<nav id="nav-mobile">
 			<a href="#presentation">Présentation</a>
 			<a href="#intervenants">Intervenants</a>
-			<a href="#hote">Ateliers</a>
-			<a href=""></a>
-			<a href=""></a>
-			<a href=""></a>
+			<a href="#ateliers">Ateliers</a>
 		</nav>
 		<button id="showNav"><i class="fa-solid fa-bars"></i></button>
 		<button id="hideNav">&cross;</button>
@@ -50,40 +43,77 @@
 			</article>
 	</section>
 
-	<h2 class="sectionTitle"  id="ateliers">Intervenants</h2>
+	<h2 class="sectionTitle"  id="intervenants">Intervenants</h2>
 	<section class="cards-container">
 		<article class="card">
-			<div class="cardHeader">
-				<span></span>
-				<img src="./img/youssefMourdi.jpg" alt="">
-			</div>
-			<div id="carBody">
-				
-			</div>
-
+			<img src="./img/youssefMourdi.jpg">
+			<h3>Prof. Dr. Youssef MOURDI</h3>
+			<h4>Université Cadi Ayyad<br> - <br>FP SAFI</h4>
 		</article>
+
+		<article class="card">
+			<img src="./img/Widad Jakjoud.jpg">
+			<h3>Dr. Eng. Widad JAKJOUD</h3>
+			<h4>OFPPT<br> - <br>ISTA NTIC SAFI</h4>
+		</article>
+
+		<article class="card">
+			<img src="./img/Lhoussain Ait Benmouh.jpg">
+			<h3>Eng. Lhoussain AIT BENMOUH</h3>
+			<h4>Ingenieur Consultant<br> - <br>Auto Entrepreneur France</h4>
+		</article>
+		
+		<article class="card">
+			<img src="./img/Hajar_Moudoud.jpg">
+			<h3>Dr. Eng. Hajar MOUDOUD</h3>
+			<h4>Université de Sherbrooke<br> - <br>Sherbrooke CANADA</h4>
+		</article>
+
+		<article class="card">
+			<img src="./img/Mahmoud-El-Hamlaoui.jpg">
+			<h3>Prof. Dr. Mahmoud HAMLAOUI</h3>
+			<h4>Université Mohamed V<br> - <br>ENSIAS RABAT</h4>
+		</article>
+
+		
 	</section>
 	<!-- Section 3 -->
 	<h2 class="sectionTitle"  id="ateliers">Ateliers</h2>
 	<section class="cards-container">
-		<article class="card">
-			<div class="cardHeader">
-				<span></span>
-				<img src="./img/youssefMourdi.jpg" alt="">
-			</div>
-			<div id="carBody">
-				
-			</div>
+		<article class="card2">
+			<h3>Camera Access using Linux Open Source Shell</h3>
+			<h4>Par: Amine Boutouil</h4>
+		</article>
 
+		<article class="card2">
+			<h3>Open Source KVM Software</h3>
+			<h4>Par: Salah Eddine Benhadria</h4>
 		</article>
-		<article class="card">
-			
+
+		<article class="card2">
+			<h3>NextJS</h3>
+			<h4>Par: Mohamed ENNAIM</h4>
 		</article>
-		<article class="card">
-			
-			
+
+		<article class="card2">
+			<h3>Les bases de Git</h3>
+			<h4>Par: Salma Sbiti et Soumiya Ayouch</h4>
 		</article>
-			
+
+		<article class="card2">
+			<h3>La Distribution Kali Linux </h3>
+			<h4>Par: Mohammed Amine Idrissi et Ahmed Zouita </h4>
+		</article>
+
+		<article class="card2">
+			<h3>Building a Project with Open Source Application</h3>
+			<h4>Par: Mehdi Elhjuojy</h4>
+		</article>
+
+		<article class="card2">
+			<h3>Blender 3D</h3>
+			<h4>Par: Abderrahman DAKIR ALLAH</h4>
+		</article>
 	</section>
 	<footer>
 		<span>&copy; Tout les droits sont réservés</span>
