update: navbar for mobile

--- a/index.html
+++ b/index.html
@@ -14,18 +14,11 @@
 	</div>
 	<header>
 		<a href="./index.html" id="logo"><img src="./img/logo.png"></a>
-		<nav id="nav-desktop">
+		<nav>
 			<a href="#presentation">Présentation</a>
 			<a href="#intervenants">Intervenants</a>
 			<a href="#ateliers">Ateliers</a>
 		</nav>
-		<nav id="nav-mobile">
-			<a href="#presentation">Présentation</a>
-			<a href="#intervenants">Intervenants</a>
-			<a href="#ateliers">Ateliers</a>
-		</nav>
-		<button id="showNav"><i class="fa-solid fa-bars"></i></button>
-		<button id="hideNav">&cross;</button>
 	</header>
 	
 	
