fix: mobile navbar fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
 	<span id="anchor"></span>
 	<header>
-		<a href="./index.html" id="logo"><img src="./img/logo.png"></a>
+		<div style="display: flex; justify-content: space-between;">
+			<a href="./index.html" id="logo"><img src="./img/logo.png"></a>
+			<button><i class="fa-solid fa-bars"></i></button>
+		</div>
 		<nav>
 			<a href="#presentation">Présentation</a>
 			<a href="#intervenants">Intervenants</a>
@@ -20,7 +23,6 @@
 	</header>
 	<div id="landing">
 	</div>
-	
 	
 	<!-- section 1 -->
 	<h2 class="sectionTitle" id="presentation">Présentation</h2>
