ofppt logo added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 	<span id="anchor"></span>
 	<header>
 		<div style="display: flex; justify-content: space-between;">
-			<a href="./index.html" id="logo"><img src="./img/logo.png"></a>
+			<a href="./index.html"><img src="./img/logo.png"></a>
+			
 			<button><i class="fa-solid fa-bars"></i></button>
+
+			<a href="https://www.ofppt.ma" target="_blank"><img id="logo" src="./img/Logo_ofppt.png"></a>
+
 		</div>
 		<nav>
 			<a href="#presentation">Présentation</a>
