removed workshop & added workshop

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 
 		<article class="card2">
 			<h3>NextJS</h3>
-			<h4>Par: Mohamed ENNAIM</h4>
+			<h4>Par: Mohamed ENNAIM & Safaa EL HIRCH</h4>
 		</article>
 
 		<article class="card2">
 			<h3>Les bases de Git</h3>
-			<h4>Par: Salma Sbiti et Soumiya Ayouch</h4>
+			<h4>Par: Salma Sbaiti et Soumiya Ayouch</h4>
 		</article>
 
 		<article class="card2">
@@ -105,8 +105,8 @@
 		</article>
 
 		<article class="card2">
-			<h3>Building a Project with Open Source Application</h3>
-			<h4>Par: Mehdi Elhjuojy</h4>
+			<h3>Open Source Project Management - Odoo</h3>
+			<h4>Par: Hamza CHAKIR</h4>
 		</article>
 
 		<article class="card2">
